--- a/src/index.scss
+++ b/src/index.scss
@@ -123,7 +123,7 @@ nav ul a {
 }
 
 .home-logo {
-  background-image: url(./assets/IMG_1.jpg);
+  background-image: url(IMG_1.jpg);
   -webkit-animation: morph 8s ease-in-out infinite;
   animation: morph 8s ease-in-out infinite;
   background-position: 50%;
